<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>mx.urieban.minsait</groupId>
	<artifactId>mx.urieban.minsait.crud</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>pom</packaging>
	<name>Minsait CRUD project</name>
	<modules>
		<module>minsait-crud-dax</module>
		<module>minsait-crud-core</module>
		<module>minsait-crud-service</module>
		<module>minsait-crud-controller</module>
	</modules>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<artifactId>maven-resources-plugin</artifactId>
					<version>3.3.0</version>
				</plugin>
				<plugin>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.10.1</version>
					<configuration>
						<!--<compilerVersion>19</compilerVersion>-->
						<release>19</release>
						<!--<compilerArgs>&#45;&#45;source 19</compilerArgs>-->
						<compilerArgs>--enable-preview</compilerArgs>
						<!--<compilerArgs>&#45;&#45;add-modules jdk.incubator.concurrent</compilerArgs>-->
					</configuration>
				</plugin>
				<plugin>
					<artifactId>maven-jar-plugin</artifactId>
					<version>3.2.2</version>
				</plugin>

				<plugin>
					<artifactId>maven-deploy-plugin</artifactId>
					<version>3.0.0</version>
				</plugin>
				<!-- site lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#site_Lifecycle -->
				<plugin>
					<artifactId>maven-site-plugin</artifactId>
					<version>4.0.0-M3</version>
				</plugin>
				<plugin>
					<artifactId>maven-project-info-reports-plugin</artifactId>
					<version>3.4.0</version>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<developers>
		<developer>
			<name>Uriel Esteban</name>
			<id>uriel.esteban</id>
			<email>u.esteban.p@yaxche.mx</email>
			<roles>
				<role>Developer</role>
			</roles>
		</developer>
	</developers>
</project>